--- a/app/src/styles/header.css
+++ b/app/src/styles/header.css
@@ -1,10 +1,13 @@
 .header {
 	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
 	top: 0;
 	padding: 1vw;
 	background-color: black;
 	width: 100%;
 	min-height: 60px;
+	justify-content: flex-start;
 }
 
 .header .breadscumb {
