--- a/app/src/styles/index.css
+++ b/app/src/styles/index.css
@@ -2,6 +2,7 @@
 	margin: 0;
 	padding: 0;
 	border: 0;
+	outline: 0;
 	box-sizing: border-box;
 }
 
@@ -17,6 +18,7 @@ body {
 	font-size: 14px;
 	background-color: black;
 	min-height: 100%;
+	height: auto;
 	min-width: 100%;
 	position: fixed;
 	top: 0;
@@ -25,7 +27,9 @@ body {
 
 #root {
 	min-height: 100%;
+	height: auto;
 	min-width: 100%;
+	width: 100%;
 }
 
 code {
