--- a/app/src/styles/sidenav.css
+++ b/app/src/styles/sidenav.css
@@ -7,6 +7,7 @@
 	left: 0;
 	background-color: #111; /* Black*/
 	overflow-x: hidden; /* Disable horizontal scroll */
+	border-right: 2px solid #111;
 }
 
 .sidebar-content {
